src/main/java/com/example/credit_service_project/service/errors/exceptions/ClientNotFoundException.java
package com.example.credit_service_project.service.errors.exceptions;

public class ClientNotFoundException extends RuntimeException {
    public ClientNotFoundException(String message) {
        super(message);
    }
}
